// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticLookupFormatEditor should render multiple lookup entries and unknown key value 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Key"
            id="indexPatternFieldEditor.staticLookup.keyLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Value"
            id="indexPatternFieldEditor.staticLookup.valueLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "data-test-subj": "staticLookupEditorRemoveEntry",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "actions",
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
        Object {
          "index": 1,
        },
        Object {
          "index": 2,
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    style={
      Object {
        "maxWidth": "400px",
      }
    }
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    data-test-subj="staticLookupEditorAddEntry"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add entry"
      id="indexPatternFieldEditor.staticLookup.addEntryButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiFormRow
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Value for unknown key"
        id="indexPatternFieldEditor.staticLookup.unknownKeyLabel"
      />
    }
  >
    <EuiFieldText
      data-test-subj="staticLookupEditorUnknownValue"
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value="test value"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`StaticLookupFormatEditor should render normally 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Key"
            id="indexPatternFieldEditor.staticLookup.keyLabel"
          />,
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": <Memo(MemoizedFormattedMessage)
            defaultMessage="Value"
            id="indexPatternFieldEditor.staticLookup.valueLabel"
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "data-test-subj": "staticLookupEditorRemoveEntry",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "field": "actions",
          "name": "actions",
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    style={
      Object {
        "maxWidth": "400px",
      }
    }
    tableLayout="fixed"
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    data-test-subj="staticLookupEditorAddEntry"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <MemoizedFormattedMessage
      defaultMessage="Add entry"
      id="indexPatternFieldEditor.staticLookup.addEntryButton"
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiFormRow
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Value for unknown key"
        id="indexPatternFieldEditor.staticLookup.unknownKeyLabel"
      />
    }
  >
    <EuiFieldText
      data-test-subj="staticLookupEditorUnknownValue"
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value=""
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;
